# picture_helper

./: .gitignore  ANLEITUNG.md  BgRemover.command  BgRemover.py  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL_LINUX.md  INSTALL_MAC.md  LICENSES.md  Makefile  README.md  RECOMMENDATIONS.md  RESOURCES.md  SECURITY.md  TESTING.md  codecov.yml  create_BgRemover_app.sh  diagnose_mac.sh  pyproject.toml
.claude/: settings.json
.claude/commands/: README.md  analyze-arch.md  analyze-bugs.md  analyze-security.md  analyze-tests.md
.claude/hooks/: session-start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/agents/: README.md  TEST_AGENTS.md  bug-fix.yml  code-review.yml  documentation.yml  extended-README.md  performance.yml  test.yml
.github/codex/: security-findings.schema.json  security-scan-prompt.md
.github/workflows/: benchmark.yml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  codex-security-scan.yml  coverage.yml  dependency-audit.yml  license-check.yml  pr-ci.yml  release-abnahme.yml  release-linux.yml  ui-nightly.yml
app_screenshots/bgremover_complete_20260528_214013/: manifest.md
app_screenshots/bgremover_complete_20260625_123039/: manifest.md
app_screenshots/bgremover_complete_20260711_094027/: manifest.md
app_screenshots/bgremover_complete_20260719_152102/: manifest.md
app_screenshots/bgremover_complete_20260719_162826/: manifest.md
app_screenshots/bgremover_complete_20260722_171622/: manifest.md
benchmarks/: README.md
benchmarks/results/: 2026-06-08.json  2026-06-15.json  2026-06-15T112346.json  2026-06-29.json  2026-07-18.json
bgremover/: __init__.py  __main__.py  _version.py  ai_install_dialog.py  ai_model_dialog.py  ai_model_status.py  ai_process.py  app.py  app_update.py  canvas.py  canvas_crop.py  canvas_crop_flow.py  canvas_events.py  canvas_helpers.py  canvas_history.py  canvas_lasso.py  canvas_selection.py  canvas_transform.py  canvas_viewport.py  color_ops.py  constants.py  crop.py  crop_bar.py  eufymake_export.py  eufymake_export_dialog.py  eufymake_validate.py  eufymake_writer.py  export_checks.py  gloss_preview.py  height_map.py  height_map_panel.py  height_ops.py  history_popup.py  i18n.py  icons.py  image_loading.py  image_ops.py  image_utils.py  layer_panel.py  logging_config.py  (+32 more)
design/: Prototyp A - Geführter Workflow.dc.html
docs/: PACKAGING_SMOKE.md  PROJECT_FORMAT.md  REDESIGN_SPEC.md  RELEASE_AUTOMATION.md  UX_3D_PREVIEW.md
docs/history/: ADR-2026-3d-reliefvorschau-renderer.md  ADR-2026-codeql-codex-sicherheitsmodell.md  ADR-2026-eufymake-exportpaket.md  ADR-2026-height-16bit-datenvertrag.md  ADR-2026-projekt-ebenen-datenmodell.md  ADR-2026-release-abnahme-automatisierung.md  EPIC-581-ABNAHME.md  EPIC-582-ABNAHME.md  RECOMMENDATIONS-2026-pre-v2.2.en.md  RECOMMENDATIONS-2026-pre-v2.2.es.md  RECOMMENDATIONS-2026-pre-v2.2.fr.md  RECOMMENDATIONS-2026-pre-v2.2.md  RECOMMENDATIONS-2026-pre-v2.2.uk.md  RECOMMENDATIONS-2026-pre-v2.2.zh.md  RELEASE-2.6.0-artifact-naming-gate.md  RELEASE-2.6.0-candidate-gate.md  RELEASE-2.6.0-scope-freeze.md
docs/i18n/en/: ANLEITUNG.md  CHANGELOG.md  INSTALL_LINUX.md  INSTALL_MAC.md  LICENSES.md  README.md  RECOMMENDATIONS.md  RESOURCES.md
docs/i18n/es/: ANLEITUNG.md  CHANGELOG.md  INSTALL_LINUX.md  INSTALL_MAC.md  LICENSES.md  README.md  RECOMMENDATIONS.md  RESOURCES.md
docs/i18n/fr/: ANLEITUNG.md  CHANGELOG.md  INSTALL_LINUX.md  INSTALL_MAC.md  LICENSES.md  README.md  RECOMMENDATIONS.md  RESOURCES.md
docs/i18n/uk/: ANLEITUNG.md  CHANGELOG.md  INSTALL_LINUX.md  INSTALL_MAC.md  LICENSES.md  README.md  RECOMMENDATIONS.md  RESOURCES.md
docs/i18n/zh/: ANLEITUNG.md  CHANGELOG.md  INSTALL_LINUX.md  INSTALL_MAC.md  LICENSES.md  README.md  RECOMMENDATIONS.md  RESOURCES.md
packaging/linux/: README.md  build_appimage.sh  build_deb.sh  de.bgremover.app.desktop  de.bgremover.app.metainfo.xml
packaging/mac/: README.md  bgremover.spec  bgremover_launcher.py  build_macos.sh
requirements/: constraints.txt
scripts/: abnahme_aggregate.py  abnahme_probe.py  abnahme_scale_probe.py  abnahme_smoke.py  abnahme_vision_check.py  benchmark.py  check_test_env.py  create_security_scan_issues.py  extract_release_notes.py  generate_anleitung_pdf.py  generate_app_screenshots.py  generate_license_report.py  release_abnahme.py  scan_release_artifacts.py  smoke_launch.py
tests/: _ai_selfcheck_helpers.py  _fakes.py  conftest.py  test_abnahme_aggregate.py  test_abnahme_smoke.py  test_abnahme_vision_check.py  test_ai_install_dialog.py  test_ai_model_dialog.py  test_ai_model_status.py  test_ai_process.py  test_ai_selfcheck.py  test_app.py  test_app_smoke.py  test_app_update.py  test_async_load.py  test_benchmark.py  test_benchmark_preview3d_live.py  test_benchmark_workflow.py  test_canvas_crop.py  test_canvas_events.py  test_canvas_history.py  test_canvas_layers.py  test_canvas_selection.py  test_changelog_metadata.py  test_ci_node_versions.py  test_ci_pip_pin.py  test_ci_qt_packages.py  test_ci_workflow_yaml.py  test_cli_open.py  test_color_ops.py  test_crop_overlay.py  test_dependency_constraints.py  test_diagnose_mac.py  test_drop_and_history.py  test_e2e_release_regression.py  test_eufymake_export.py  test_eufymake_export_dialog.py  test_eufymake_validate.py  test_eufymake_writer.py  test_export_checks.py  (+77 more)
