[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bgremover"
version = "2.1.0"
description = "Hintergrund-Entfernungs- und Bildbearbeitungs-Tool für macOS"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "NikolayDA" }]
keywords = ["background removal", "image editing", "rembg", "PyQt6", "macOS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Editors",
]
dependencies = [
    "PyQt6>=6.5",
    "Pillow>=10",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/NikolayDA/picture_helper"
Repository = "https://github.com/NikolayDA/picture_helper"
Issues = "https://github.com/NikolayDA/picture_helper/issues"

[project.optional-dependencies]
ai = ["rembg[cpu]>=2.0"]
test = ["pytest>=8", "pytest-qt>=4.4", "ruff>=0.6", "mypy>=1.10"]
# Erzeugt ANLEITUNG.pdf aus ANLEITUNG.md (scripts/generate_anleitung_pdf.py).
# Zusaetzlich noetig: DejaVu-Schriften (System-Paket fonts-dejavu-core)
# sowie die WeasyPrint-Systembibliotheken (Pango/Cairo/GDK-Pixbuf).
docs = ["markdown>=3.5", "weasyprint>=61", "fonttools>=4.0"]

[project.scripts]
bgremover = "bgremover.app:main"

[tool.setuptools]
packages = ["bgremover"]
include-package-data = true

[tool.setuptools.package-data]
bgremover = ["icons/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not ui'"
markers = [
    "ui: lokale, qtbot-gesteuerte UI-Interaktionstests (laufen NICHT in der CI; lokal via `make ui`).",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Bewusst kompakter Stil (Mehrfach-Statements mit Semikolons, einzelne
# kurze Schleifenvariablen wie `l`/`b`). Der Stil ist mit dem Code aus
# dem ehemaligen Monolithen ins Paket gewandert (Runde 5, Phase B).
"bgremover/*.py" = ["E702", "E741"]
# conftest.py muss QT_QPA_PLATFORM setzen, bevor PyQt6 importiert wird.
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["bgremover"]
ignore_missing_imports = true
# Qt-Override-Signaturen (event/option/widget) und dynamische Qt-Attribute
# erzeugen sonst viel Rauschen ohne echten Mehrwert; geprüft wird, dass
# Namen/Importe/Signaturen grundsätzlich konsistent sind.
check_untyped_defs = false
# Wird schrittweise verschärft (RECOMMENDATIONS Runde 4 #4). `index` und
# `operator` sind bereits sauber und daher aktiviert. Verbleibende Codes
# mit gemessener Fehlerzahl: arg-type (2), attr-defined (2),
# func-returns-value (4), override (7), union-attr (67), assignment (4).
disable_error_code = [
    "union-attr", "assignment", "arg-type", "attr-defined",
    "override", "func-returns-value",
]
