# setuptools>=78.1.1: schliesst CVE-2024-6345 (RCE in package_index) und
# CVE-2025-47273 (Path-Traversal in PackageIndex._download_url). setuptools ist
# eine direkte Build-Abhaengigkeit; der Build-Backend laeuft in pip-Isolation,
# daher wird die sichere Version hier (und in requirements/constraints.txt)
# erzwungen.
[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bgremover"
version = "2.5.0"
description = "Hintergrund-Entfernungs- und Bildbearbeitungs-Tool (macOS und Linux)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "NikolayDA" }]
keywords = ["background removal", "image editing", "rembg", "PyQt6", "macOS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Editors",
]
dependencies = [
    "PyQt6>=6.5,<7",
    "Pillow>=10,<13",
    "numpy>=1.24,<3",
]

[project.urls]
Homepage = "https://github.com/NikolayDA/picture_helper"
Repository = "https://github.com/NikolayDA/picture_helper"
Issues = "https://github.com/NikolayDA/picture_helper/issues"

[project.optional-dependencies]
ai = ["rembg[cpu]>=2.0,<3"]
test = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "ruff>=0.6",
    "mypy>=1.10",
    "packaging>=24",
    "coverage[toml]>=7.6",
]
# Erzeugt ANLEITUNG.pdf aus ANLEITUNG.md (scripts/generate_anleitung_pdf.py).
# Zusaetzlich noetig: unter Linux DejaVu-Schriften (fonts-dejavu-core),
# unter macOS Arial/Courier New; dazu Pango/Cairo/GDK-Pixbuf.
docs = ["markdown>=3.5", "weasyprint>=61", "fonttools>=4.0"]

[project.scripts]
bgremover = "bgremover.app:main"

[tool.setuptools]
packages = ["bgremover"]
include-package-data = true

[tool.setuptools.package-data]
bgremover = ["icons/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 'not ui or ui_smoke': die volle qtbot-Suite ist deselektiert, das kleine
# ``ui_smoke``-Subset laeuft aber ueberall mit (PR-/Full-CI via ``make test``).
addopts = "-q -m 'not ui or ui_smoke'"
markers = [
    "ui: qtbot-gesteuerte UI-Interaktionstests; die volle Suite laeuft nur nightly via `make ui`.",
    "ui_smoke: kleines, stabiles UI-Smoke-Subset (zusaetzlich `ui`); laeuft in PR/Full-CI im normalen Testlauf.",
]

[tool.coverage.run]
source = ["bgremover"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 86

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Bewusst kompakter Stil mit einzelnen Mehrfach-Statements.
"bgremover/*.py" = ["E702"]
# conftest.py muss QT_QPA_PLATFORM setzen, bevor PyQt6 importiert wird.
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["bgremover"]
ignore_missing_imports = true
# Qt-Override-Signaturen (event/option/widget) und dynamische Qt-Attribute
# erzeugen sonst viel Rauschen ohne echten Mehrwert; geprüft wird, dass
# Namen/Importe/Signaturen grundsätzlich konsistent sind.
check_untyped_defs = false
# Fehlerklassen werden nicht pauschal deaktiviert. Logiklastige Qt-Module
# werden unten inkrementell auch in unannotierten Funktionskörpern geprüft.

# Qt-arme Logikmodule sollen strenger geprueft werden: hier wuerde
# `check_untyped_defs = false` echte Luecken verstecken. Die Module
# enthalten kaum Qt-Overrides, daher ist disallow_untyped_defs hier
# realistisch.
[[tool.mypy.overrides]]
module = [
    "bgremover.ai_process",
    "bgremover.image_ops",
    "bgremover.image_utils",
    "bgremover.color_ops",
    "bgremover.eufymake_export",
    "bgremover.eufymake_validate",
    "bgremover.eufymake_writer",
    "bgremover.export_checks",
    "bgremover.gloss_preview",
    "bgremover.height_map",
    "bgremover.height_ops",
    "bgremover.preview_mode",
    "bgremover.relief_preview",
    "bgremover.crop",
    "bgremover.project_model",
    "bgremover.project_history",
    "bgremover.project_schema",
    "bgremover.project_io",
    "bgremover.recent_files",
    "bgremover.units",
    "bgremover.canvas_selection",
    "bgremover.canvas_lasso",
    "bgremover.canvas_transform",
    "bgremover.canvas_viewport",
]
disallow_untyped_defs = true
check_untyped_defs = true

# Diese Qt-Module enthalten relevante Zustands- und Lifecycle-Logik. Ihre
# unannotierten Qt-Callbacks werden deshalb ebenfalls inhaltlich geprüft,
# ohne bereits alle UI-Module auf einmal umzustellen.
[[tool.mypy.overrides]]
module = [
    "bgremover.canvas",
    "bgremover.main_window",
    "bgremover.worker_controller",
]
check_untyped_defs = true
